--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "eslint": "7.31.0",
-    "eslint-config-htmlacademy": "4.0.2"
+    "eslint-config-htmlacademy": "4.0.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "engines": {
     "node": "12"
