--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
+    "dayjs": "1.10.6",
     "eslint": "7.31.0",
     "eslint-config-htmlacademy": "4.0.2",
     "webpack": "4.44.2",
