--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
-    "dayjs": "1.10.6",
     "eslint": "7.31.0",
     "eslint-config-htmlacademy": "4.0.2",
     "webpack": "4.44.2",
@@ -19,5 +18,8 @@
   },
   "engines": {
     "node": "12"
+  },
+  "dependencies": {
+    "dayjs": "1.10.6"
   }
 }
